[Update]admin・publicの検索画面に並び替え機能を追加

--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -7,7 +7,7 @@
 <table class="table table-hover table-inverse">
   <!--検索対象モデルがPostの時 -->
   <% if @range == "投稿" %>
-    <%= render 'public/posts/index', posts: @posts %>
+    <%= render 'public/searches/index', posts: @posts %>
   <!--検索対象モデルがPostではない時(= 検索対象モデルがCustomerの時) -->
   <% else %>
     <%= render 'public/customers/customer_index', customers: @customers %>
