--- a/app/views/admin/searches/search.html.erb
+++ b/app/views/admin/searches/search.html.erb
@@ -7,7 +7,7 @@
 <table class="table table-hover table-inverse">
   <!--検索対象モデルがPostの時 -->
   <% if @range == "投稿" %>
-    <%= render 'admin/posts/index', posts: @posts %>
+    <%= render 'admin/searches/index', posts: @posts %>
   <!--検索対象モデルがPostではない時(= 検索対象モデルがCustomerの時) -->
   <% else %>
     <%= render 'admin/customers/customer_index', customers: @customers %>
