--- a/app/views/public/relationships/followings.html.erb
+++ b/app/views/public/relationships/followings.html.erb
@@ -1,6 +1,6 @@
-<h2>Follow Users</h2>
+<h2><%= @customer.name %>さんがフォローしているユーザ</h2>
 <% if @customers.exists? %>
   <%= render '/public/customers/customer_index', customers: @customers %>
 <% else %>
-  <p>ユーザーはいません</p>
+  <p>ユーザはいません</p>
 <% end %>
