--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,3 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
-
 <% if current_customer.nil? %>
   <div class="btn-wrapper col-10 mx-auto">
     <div class="row">
@@ -15,6 +12,10 @@
   </div>
 <% end %>
 
+<%= render 'public/homes/random_all', posts: @posts_random %>
 <%= render 'public/homes/rank_weekly', posts: @posts_game, genre: Genre.find(1) %>
+<%= render 'public/homes/random', posts: @posts_game_random, genre: Genre.find(1) %>
 <%= render 'public/homes/rank_weekly', posts: @posts_manga, genre: Genre.find(2) %>
+<%= render 'public/homes/random', posts: @posts_manga_random, genre: Genre.find(2) %>
 <%= render 'public/homes/rank_weekly', posts: @posts_application, genre: Genre.find(3) %>
+<%= render 'public/homes/random', posts: @posts_application_random, genre: Genre.find(3) %>
