--- a/app/views/public/genres/_show.html.erb
+++ b/app/views/public/genres/_show.html.erb
@@ -22,16 +22,12 @@
             <% if post.image.attached? %>
               <%= image_tag post.image, size: "100x100" %>
             <% else %>
-              <%= image_tag 'default-image', size: "100x100" %>
+              <%= image_tag 'default-image.jpg', size: "100x100" %>
             <% end %>
+            <br>◆ <%= post.title %>
           <% end %>
-          <%= link_to post_path(post.id) do %>
-            <%= post.title %>
-          <% end %>
-          <%= post.introduction %>
-          <%= post.selling_point %>
-          <%= post.detail %>
-              
+          <%= post.introduction.truncate(50) %>
+          <%= link_to "詳細", post_path(post), class: "btn btn-sm btn-dark" %>
           <% if current_customer.present? %>
             <div><%= render 'public/favorites/favorite_button', post: post %></div>
           <% else %>
@@ -40,6 +36,9 @@
           <!--削除済みのコメントをカウントしない-->
           <% comments = Comment.where(post_id: post.id).where(is_deleted: false) %>
             <%= link_to "#{comments.count} コメント", post_path(post) %>
+            By<%= link_to customer_path(post.customer) do %>
+              <%= post.customer.name %>
+          <% end %>
         </div>
       </div>
     <% end %>
