--- a/app/views/public/genres/index.html.erb
+++ b/app/views/public/genres/index.html.erb
@@ -1,8 +1,10 @@
 <div class="container pb-50">
   <div class="row">
-    <div class="col">
+    <div class='col-md-3'></div>
+    <div class='col-md-6'>
       <h4>ジャンル一覧</h4>
     </div>
+    <div class='col-md-3'></div>
   </div>
 
   <%= render 'index', genres: @genres %>
