--- a/app/views/public/homes/_random_all.html.erb
+++ b/app/views/public/homes/_random_all.html.erb
@@ -7,15 +7,16 @@
     <% posts.each do |post| %>
       <div class="col-md-2">
         <div class="card">
+          <%= post.genre.genre_name %>
           <%= link_to post_path(post) do %>
             <% if post.image.attached? %>
               <%= image_tag post.image, size: "100x100" %>
             <% else %>
-              <%= image_tag 'default-image', size: "100x100" %>
+              <%= image_tag 'default-image.jpg', size: "100x100" %>
             <% end %>
+            <br>◆ <%= post.title.truncate(19) %></p>
           <% end %>
-          ◆<%= post.title.truncate(12) %></p>
-          <%= post.introduction.truncate(20) %>
+          <%= post.introduction.truncate(32) %>
           <%= link_to "詳細", post_path(post), class: "btn btn-sm btn-dark" %>
           <% if current_customer.present? %>
             <div><%= render 'public/favorites/favorite_button', post: post %></div>
@@ -25,8 +26,8 @@
           <!--削除済みのコメントをカウントしない-->
           <% comments = Comment.where(post_id: post.id).where(is_deleted: false) %>
             <%= link_to "#{comments.count} コメント", post_path(post) %>
-          By<%= link_to customer_path(post.customer) do %>
-            <%= post.customer.name %>
+            By<%= link_to customer_path(post.customer) do %>
+              <%= post.customer.name %>
           <% end %>
         </div>
       </div>
