--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,3 +1,7 @@
-<h1>投稿一覧</h1>
+<div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-4"><h1>投稿一覧</h1></div>
+  <div class="col-md-6"></div>
 
-<%= render 'index',posts: @posts %>
+  <%= render 'index',posts: @posts %>
+</div>
