--- a/app/views/admin/genres/_show.html.erb
+++ b/app/views/admin/genres/_show.html.erb
@@ -22,15 +22,14 @@
             <% if post.image.attached? %>
               <%= image_tag post.image, size: "100x100" %>
             <% else %>
-              <%= image_tag 'default-image', size: "100x100" %>
+              <%= image_tag 'default-image.jpg', size: "100x100" %>
             <% end %>
           <% end %>
           <%= link_to admin_post_path(post.id) do %>
             <%= post.title %>
           <% end %>
-          <%= post.introduction %>
-          <%= post.selling_point %>
-          <%= post.detail %>
+          <%= post.introduction.truncate(50) %>
+          <%= link_to "詳細", post_path(post), class: "btn btn-sm btn-dark" %>
               
           <%= render 'public/favorites/favorite_count', post: post %>
           
