[Update]publicの検索機能等のレイアウト調整

--- a/app/views/public/drafts/edit.html.erb
+++ b/app/views/public/drafts/edit.html.erb
@@ -1,41 +1,50 @@
-<h1>下書き編集・投稿</h1>
+<div class="container">
+  <div class='row'>
+    <div class='col-md-4'></div>
+    <div class='col-md-4'>
+      <h1>下書き編集・投稿</h1>
 
-<%= form_tag({controller:"posts",action:"new"}, method: :get) do %>
-    <%= text_field_tag :tag %>
-    <%= submit_tag 'タグを追加' %>
-<% end %>
-
-<%= form_with model: @post, url: '/posts', method: :post do |f| %>
-
-  <h4><%= f.collection_select :genre_id, @genres, :id, :genre_name, prompt: "-- 選択してください --", required: true, class: "w-50" %></h4>
-
-  <div class='form-group'>
-    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
-      <div class='form-check'>
-        <%= tag.label class: 'form-check-label' do %>
-          <%= tag.check_box class: 'form-check-input' %>
-          <%= tag.text %>
-        <% end %>
-      </div>
-    <% end %>
-  
-  <h4>画像</h4>
-  <%= f.file_field :image, accept: "image/*" %>
-
-  <h4>タイトル</h4>
-  <%= f.text_field :title %>
-
-  <h4>紹介文</h4>
-  <%= f.text_area :introduction %>
-
-  <h4>アピールポイント</h4>
-  <%= f.text_area :selling_point %>
-
-  <h4>詳細文</h4>
-  <%= f.text_area :detail %>
-
-  <div class="form-group">
-    <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select w-25"} %>
+      <%= form_tag({controller:"posts",action:"new"}, method: :get) do %>
+        <%= text_field_tag :tag %>
+        <%= submit_tag 'タグを追加' %>
+      <% end %>
+      
+      <%= form_with model: @post, url: '/posts', method: :post do |f| %>
+      
+        <h4><%= f.collection_select :genre_id, @genres, :id, :genre_name, prompt: "-- 選択してください --", required: true, class: "w-50" %></h4>
+      
+        <div class='form-group'>
+          <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+            <div class='form-check'>
+              <%= tag.label class: 'form-check-label' do %>
+                <%= tag.check_box class: 'form-check-input' %>
+                <%= tag.text %>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+        
+        <h4>画像</h4>
+        <%= f.file_field :image, accept: "image/*" %>
+      
+        <h4>タイトル</h4>
+        <%= f.text_field :title %>
+      
+        <h4>紹介文</h4>
+        <%= f.text_area :introduction %>
+      
+        <h4>アピールポイント</h4>
+        <%= f.text_area :selling_point %>
+      
+        <h4>詳細文</h4>
+        <%= f.text_area :detail %>
+      
+        <div class="form-group">
+          <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select w-25"} %>
+        </div>
+        <%= f.submit '投稿する', class: "btn btn-success" %>
+      <% end %>
+    </div>
+    <div class='col-md-4'></div>
   </div>
-  <%= f.submit '投稿する', class: "btn btn-success" %>
-<% end %>
+</div>
