--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -10,10 +10,8 @@
       <% end %>
       
       <%= form_with model: @post, url: '/posts', method: :post do |f| %>
-      
-        <h4><%= f.collection_select :genre_id, @genres, :id, :genre_name, prompt: "-- 選択してください --", required: true, class: "w-50" %></h4>
-      
         <div class='form-group'>
+          <h4>タグ選択</h4>
           <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
             <div class='form-check'>
               <%= tag.label class: 'form-check-label' do %>
@@ -22,27 +20,30 @@
               <% end %>
             </div>
           <% end %>
-          
-          <h4>画像</h4>
-          <%= f.file_field :image, accept: "image/*" %>
-        
-          <h4>タイトル</h4>
-          <%= f.text_field :title %>
-        
-          <h4>紹介文</h4>
-          <%= f.text_area :introduction %>
-        
-          <h4>アピールポイント</h4>
-          <%= f.text_area :selling_point %>
-        
-          <h4>詳細文</h4>
-          <%= f.text_area :detail %>
-        
-          <div class="form-group">
-            <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select w-25"} %>
-          </div>
-          <%= f.submit '投稿する', class: "btn btn-success" %>
         </div>
+      
+        <h4>ジャンル選択</h4>
+        <h4><%= f.collection_select :genre_id, @genres, :id, :genre_name, prompt: "-- 選択してください --", required: true, class: "w-50" %></h4>
+      
+        <h4>画像</h4>
+        <%= f.file_field :image, accept: "image/*" %>
+      
+        <h4>タイトル</h4>
+        <%= f.text_field :title %>
+      
+        <h4>紹介文</h4>
+        <%= f.text_area :introduction %>
+      
+        <h4>アピールポイント</h4>
+        <%= f.text_area :selling_point %>
+      
+        <h4>詳細文</h4>
+        <%= f.text_area :detail %>
+      
+        <div class="form-group">
+          <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select w-25"} %>
+        </div>
+        <%= f.submit '投稿する', class: "btn btn-success" %>
       <% end %>
     </div>
     <div class='col-md-4'></div>
