--- a/app/views/public/tags/index.html.erb
+++ b/app/views/public/tags/index.html.erb
@@ -1,10 +1,23 @@
-<h1>タグ検索</h1>
-<p>
-  <%= form_tag({controller:"posts",action:"index"}, method: :get) do |f| %>
-    <% Tag.all.each do |t| %>
-        <li><%= check_box :tag_ids, t.name %><%= t.name %></li>
-    <% end %>
-    <%= select_tag :type, options_for_select([['OR検索'], ['AND検索']]) %>
-    <%= submit_tag '検索' %>
-  <% end %>
-</p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-4'></div>
+    <div class='col-md-4'>
+      <h1>タグ検索</h1>
+    </div>
+    <div class='col-md-4'></div>
+  </div>
+
+  <div class='row'>
+    <div class='col-md-4'></div>
+    <div class='col-md-4'>
+      <%= form_tag({controller:"posts",action:"index"}, method: :get) do |f| %>
+        <% Tag.all.each do |t| %>
+            <li><%= check_box :tag_ids, t.name %><%= t.name %></li>
+        <% end %>
+        <%= select_tag :type, options_for_select([['OR検索'], ['AND検索']]) %>
+        <%= submit_tag '検索' %>
+      <% end %>
+    </div>
+    <div class='col-md-4'></div>
+  </div>
+</div>
