--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,7 +1,11 @@
 <div class='container'>
   <div class='row'>
     <div class="col-md-3">
-      <h3 class='pull-left m-3'><strong>投稿情報</strong></h3>
+      <% if @post.status == "published" %>
+        <h3 class='pull-left m-3'><strong>投稿情報</strong></h3>
+      <% else %>
+        <h3 class='pull-left m-3'><strong>下書き情報</strong></h3>
+      <% end %>
     </div>
   </div>
   <div class='row'>
@@ -16,7 +20,11 @@
       <!--編集・削除ボタン-->
       <% if @post.customer == current_customer %>
         <div class="action center-block mx-auto">
-          <%= link_to '編集する',edit_post_path(@post), class: 'btn btn-success' %>
+          <% if @post.status == "published" %>
+            <%= link_to '編集する',edit_post_path(@post), class: 'btn btn-success' %>
+          <% else %>
+            <%= link_to '編集する',edit_customer_draft_path(current_customer, @post), class: 'btn btn-success' %>
+          <% end %>
         </div>
         <div class="action center-block mx-auto">
           <%= link_to '削除する',post_path(@post), method: :delete, class: 'btn btn-danger' %>
