--- a/app/views/public/tags/index.html.erb
+++ b/app/views/public/tags/index.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class='col-md-4'></div>
     <div class='col-md-4'>
-      <h1>タグ検索</h1>
+      <h1>タグ一覧</h1>
     </div>
     <div class='col-md-4'></div>
   </div>
