--- a/app/views/public/posts/customer_posts.html.erb
+++ b/app/views/public/posts/customer_posts.html.erb
@@ -1,4 +1,9 @@
+<div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-6">
+    <h1><%= @customer.name %>さんの投稿一覧</h1>
+  </div>
+  <div class="col-md-4"></div>
+</div>
 
-<h1>customer投稿一覧</h1>
-
-<%= render 'index',posts: @customer_posts %>
+  <%= render 'index',posts: @customer_posts %>
