--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,14 +1,13 @@
 <div class="container pb-50">
   <div class="row">
-    <div class="col">
+    <div class='col-md-3'></div>
+    <div class='col-md-6'>
       <h4>ジャンル一覧・追加</h4>
       <%= render 'form', genre: @genre_new %>
     </div>
+    <div class='col-md-3'></div>
   </div>
 
-  <div class="row">
-    <div class="col">
-      <%= render 'index', genres: @genres %>
-    </div>
-  </div>
+  <%= render 'index', genres: @genres %>
 </div>
+  
