--- a/app/views/admin/genres/_show.html.erb
+++ b/app/views/admin/genres/_show.html.erb
@@ -36,6 +36,9 @@
           <!--削除済みのコメントをカウントしない-->
           <% comments = Comment.where(post_id: post.id).where(is_deleted: false) %>
             <%= link_to "#{comments.count} コメント", admin_post_path(post) %>
+            By<%= link_to admin_customer_path(post.customer) do %>
+              <%= post.customer.name %>
+            <% end %>
           
           <div>
             <% if post.is_deleted == false %>
