--- a/app/views/admin/homes/_rank_weekly.html.erb
+++ b/app/views/admin/homes/_rank_weekly.html.erb
@@ -12,7 +12,7 @@
             <% if post.image.attached? %>
               <%= image_tag post.image, size: "100x100" %>
             <% else %>
-              <%= image_tag 'default-image', size: "100x100" %>
+              <%= image_tag 'default-image.jpg', size: "100x100" %>
             <% end %>
           <% end %>
           ◆<%= post.title.truncate(12) %></p>
