--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -4,7 +4,7 @@
       <% if @post.image.attached? %>
         <%= image_tag @post.image, size: "100x100" %>
       <% else %>
-        <%= image_tag 'default-image', size: "100x100" %>
+        <%= image_tag 'default-image.jpg', size: "100x100" %>
       <% end %>
       <td>
         <% if @post.is_deleted == false %>
