--- a/app/views/public/customers/_comment_index.html.erb
+++ b/app/views/public/customers/_comment_index.html.erb
@@ -21,7 +21,7 @@
                 <% if comment.post.image.attached? %>
                   <%= image_tag comment.post.image, size: "100x100" %>
                 <% else %>
-                  <%= image_tag 'default-image', size: "100x100" %>
+                  <%= image_tag 'default-image.jpg', size: "100x100" %>
                 <% end %>
                 <%= comment.post.title %>
               <% end %>
