[Update]画像にjpg追記

--- a/app/views/public/drafts/_index.html.erb
+++ b/app/views/public/drafts/_index.html.erb
@@ -21,7 +21,7 @@
                 <% if draft.image.attached? %>
                   <%= image_tag draft.image, size: "100x100" %>
                 <% else %>
-                  <%= image_tag 'default-image', size: "100x100" %>
+                  <%= image_tag 'default-image.jpg', size: "100x100" %>
                 <% end %>
                 <%= draft.title %>
               <% end %>
