--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,6 +1,8 @@
 <div class='container'>
   <div class='row'>
-    <div class='col-md-4'></div>
+    <div class='col-md-4'>
+      <%= render 'public/error/error_message', error: @post %>
+    </div>
     <div class='col-md-4'>
       <h1>投稿編集</h1>
       
