--- a/app/views/public/comments/_index.html.erb
+++ b/app/views/public/comments/_index.html.erb
@@ -18,7 +18,7 @@
                 <% if post.image.attached? %>
                   <%= image_tag post.image, size: "100x100" %>
                 <% else %>
-                  <%= image_tag 'default-image', size: "100x100" %>
+                  <%= image_tag 'default-image.jpg', size: "100x100" %>
                 <% end %>
                 <%= comment.post.title %>
               <% end %>
