[Fix]ゲストユーザを論理削除した際に、他ユーザの投稿が非表示になってしまう不具合、そもそもゲストユーザを論理削除できてしまう不具合を修正

--- a/app/views/admin/customers/_customer_index.html.erb
+++ b/app/views/admin/customers/_customer_index.html.erb
@@ -28,14 +28,16 @@
               <%=  %>
             </td>
             <td class="col-md-3 mx-auto text-left">
-              <% if customer.is_deleted == false %>
-                <div class="text-success">
-                  <strong><%= '登録中' %></strong>
-                </div>
-              <% else %>
-                <div class="text-secondary">
-                  <strong><%= '退会済み' %></strong>
-                </div>
+              <% if customer.is_guest? == false %>
+                <% if customer.is_deleted == false %>
+                  <div class="text-success">
+                    <strong><%= '登録中' %></strong>
+                  </div>
+                <% else %>
+                  <div class="text-secondary">
+                    <strong><%= '退会済み' %></strong>
+                  </div>
+                <% end %>
               <% end %>
             </td>
           </tr>
