--- a/app/views/public/posts/customer_posts.html.erb
+++ b/app/views/public/posts/customer_posts.html.erb
@@ -6,4 +6,4 @@
   <div class="col-md-4"></div>
 </div>
 
-  <%= render 'index',posts: @customer_posts %>
+  <%= render 'index_customer_posts',posts: @customer_posts %>
