[Fix]adminの投稿の検索結果にてタイトルではなく紹介文が表示されていた不具合を修正

--- a/app/views/admin/searches/_index.html.erb
+++ b/app/views/admin/searches/_index.html.erb
@@ -18,7 +18,7 @@
             <% end %>
           <% end %>
           <%= link_to post_path(post.id) do %>
-            ◆ <<%= post.title.truncate(40) %>
+            ◆ <%= post.title.truncate(40) %>
           <% end %>
           <%= post.introduction.truncate(50) %>
           
