[Update]publicの投稿一覧のいいねを非同期化

--- a/app/views/public/favorites/_favorite_button.html.erb
+++ b/app/views/public/favorites/_favorite_button.html.erb
@@ -1,13 +1,13 @@
 
 <% if post.favorited_by?(current_customer) %>
   <div>
-    <%= link_to post_favorites_path(post), method: :delete do %>
+    <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
       ♥<%= post.favorites.count %> いいね
     <% end %>
   </div>
   <% else %>
   <div>
-    <%= link_to post_favorites_path(post), method: :post do %>
+    <%= link_to post_favorites_path(post), method: :post, remote: true do %>
       ♡<%= post.favorites.count %> いいね
     <% end %>
   </div>
