--- a/app/views/public/favorites/destroy.js.erb
+++ b/app/views/public/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#favorite_buttons_<%= @post.id %>').html("<%= j(render "public/favorites/favorite_button", post: @post) %>");
+$('.favorite_buttons_<%= @post.id %>').html("<%= j(render "public/favorites/favorite_button", post: @post) %>");
