--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer class="p-3 mb-2 bg-info text-white">
   <div class='container mt-5'>
   	<div class='row'>
     	<div class='mx-auto'>
