--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
 
-  <body>
+  <body style="background-color: #FFFFE0;">
     <% if customer_signed_in? %>
       <%= render 'layouts/public_header' %>
     <% elsif admin_signed_in? %>
