--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,3 +2,10 @@
 @import '~bootstrap/scss/bootstrap';
 // FontAwesomeの導入
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+.main {
+  background-image: url("../images/About.jpg");
+  background-size: auto;
+  background-repeat:  no-repeat;
+  background-position:center center;
+}
