--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,20 @@
-aboutページ
+<div class="main">
+  <div class="row">
+    <div class="mx-auto">
+      <div class="text-center m-5">
+        <h1>About</h1></br>
+        <p class="p-3 mb-2 bg-white text-dark">Idea voteはアイディアを持ち寄るサイトです。<br>
+          みなさんのちょっとしたアイディアを投稿していただき、<br>
+          そのアイディアを魅力的と感じた方が制作し、<br>
+          一つでも多くのアイディアが形になることを願っています。
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="image mx-auto" style="height: 200px">
+      <div class=" m-5" style="width: 300px">
+      </div>
+    </div>
+  </div>
+</div>
