[Update]タグ検索後の並び替え機能を追加

--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div>
-      <%= render 'public/posts/sort' %>
+      <%= render 'public/posts/sort', tag_ids: tag_ids, type: type %>
     </div>
   </div>
   
