--- a/app/views/public/tags/show.html.erb
+++ b/app/views/public/tags/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div>
-      <%= render 'public/posts/sort' %>
+      <%= render 'public/tags/sort' %>
     </div>
   </div>
   
