[Update]adminの投稿一覧の並び替え機能の不具合を修正

--- a/app/views/admin/posts/_index.html.erb
+++ b/app/views/admin/posts/_index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div>
-      <%= render 'admin/posts/sort' %>
+      <%= render 'admin/posts/sort', tag_ids: tag_ids, type: type %>
     </div>
   </div>
   
