--- a/app/views/admin/posts/_sort.html.erb
+++ b/app/views/admin/posts/_sort.html.erb
@@ -1,4 +1,4 @@
 
-<%= link_to '新着順', admin_posts_path({target:"date", sort:"desc"}) %>
-<%= link_to 'いいね数順', admin_posts_path({target:"favorite", sort:"asc"}) %>
-<%= link_to 'コメント数順', admin_posts_path({target:'comment', sort:'asc'}) %>
+<%= link_to '新着順', admin_posts_path(target:"date", sort:"desc", tag_ids: tag_ids, type: type) %>
+<%= link_to 'いいね数順', admin_posts_path(target:"favorite", sort:"asc", tag_ids: tag_ids, type: type) %>
+<%= link_to 'コメント数順', admin_posts_path(target:'comment', sort:'asc', tag_ids: tag_ids, type: type) %>
