[Update]publicのタグ・検索投稿一覧にページネーション追加

--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -3,7 +3,7 @@
     <% if @range == "ユーザ" %>
       <h2>"<%= @word %>"のユーザ検索結果（<%= @customers.count %>件）</h2>
     <% else %>
-      <h2>"<%= @word %>"の投稿検索結果（<%= @posts.count %>件）</h2>
+      <h2>"<%= @word %>"の投稿検索結果</h2>
     <% end %>
   </div>
 
