--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -1,11 +1,18 @@
 
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  </head>
+
 <div class="container">
   <div class="row">
     <div>
       <%= render 'public/posts/sort', tag_ids: tag_ids, type: type %>
     </div>
   </div>
-  
+
   <div class="row">
     <% posts.each do |post| %>
       <div class="col-md-3">
@@ -31,12 +38,16 @@
           <!--削除済みのコメントをカウントしない-->
           <% comments = Comment.where(post_id: post.id).where(is_deleted: false) %>
             <%= link_to "#{comments.count} コメント", post_path(post) %>
+          <div>
             By<%= link_to customer_path(post.customer) do %>
               <%= post.customer.name %>
-          <% end %>
+            <% end %>
+          </div>
         </div>
       </div>
     <% end %>
   </div>
   <%= paginate posts %>
 </div>
+
+</html>
